--- a/inferential-statistics.Rmd
+++ b/inferential-statistics.Rmd
@@ -376,6 +376,8 @@ shiny::runGitHub("statistical-estimation",
                  "marcellgranat", ref = "main")
 ```
 
+You need to install 4 packages to use it: `shiny`, `shinydashboard`, `shinyWidgets` & `tidyverse`
+
 $$f(x)=\frac{1}{\sigma \sqrt{2 \pi}} e^{-\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2}$$
 
 --
