--- a/inferential-statistics.Rmd
+++ b/inferential-statistics.Rmd
@@ -378,13 +378,17 @@ shiny::runGitHub("statistical-estimation",
 
 You need to install 4 packages to use it: `shiny`, `shinydashboard`, `shinyWidgets` & `tidyverse`
 
+---
+
+## Normal distribution
+
+.blue[Density] function:
+
 $$f(x)=\frac{1}{\sigma \sqrt{2 \pi}} e^{-\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2}$$
-˜˜
---
 
 **Distribution** and **.blue[density]** function of normal distribution
 
-```{r fig.height=2.5, out.height="250", dpi = 400}
+```{r fig.height=3, out.height="300", dpi = 400}
 ggplot() +
   geom_function(fun = dnorm, color = "#378C95", size = 2) +
   geom_function(fun = pnorm, color = "red", size = 2) +
