--- a/index.Rmd
+++ b/index.Rmd
@@ -32,6 +32,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 1. [Statistical inference I](inferential-statistics.html)
 
+1. [Statistical inference II](inferential-statistics2.html)
+
 ------------------------------------------------------------------------
 
  `r fontawesome::fa("internet-explorer")` [https://www.marcellgranat.com](https://www.marcellgranat.com/big_data)
